--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
     "yarn": "^1.19.1"
   },
   "scripts": {
