--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "yarn": "^1.19.1"
