--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "homepage": "https://vlad613.github.io/portfolio/",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.10.2",
     "react-redux": "^7.2.0",
     "react-scripts": "3.2.0",
