--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.8.0",
     "redux": "^4.0.5",
     "yarn": "^1.19.1"
   },
