--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "homepage": "https://vlad613.github.io/portfolio/",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "node-sass": "^4.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -12,6 +14,7 @@
     "react-scripts": "3.2.0",
     "react-scroll": "^1.8.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "yarn": "^1.19.1"
   },
   "scripts": {
